<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:padding="16dp">


    <TextView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:foregroundGravity="center"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameText"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginEmail"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#77DC1717"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/register2"
        android:textColor="#FFFFFF"
        android:outlineProvider="@null"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textColorHint="#00FFFFFF" />

</RelativeLayout>
