<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center|center_horizontal">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/person_add2" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="#AC1214"
        android:textColorHint="@color/white"
        android:textColorLink="#AC1214" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerName"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHighlight="#AC1214"
        android:textColorHint="@color/white"
        android:textColorLink="#AC1214" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerEmail"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHighlight="#AC1214"
        android:textColorHint="@color/white"
        android:textColorLink="#AC1214" />

    <EditText
        android:id="@+id/registerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPassword"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHighlight="#AC1214"
        android:textColorHint="@color/white"
        android:textColorLink="#AC1214" />


    <Switch
        android:id="@+id/adminSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerPhone"
        android:layout_marginHorizontal="60dp"
        android:gravity="start|center_vertical"
        android:layout_marginTop="36dp"
        android:text="@string/admin"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminSwitch"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#92E13434"
        android:text="@string/register"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/gotoMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#92F1EEEE"
        android:text="@string/cancel"
        android:textColor="@color/white" />


</RelativeLayout>
