<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!-- VideoView para el video de fondo -->
    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center"
        android:gravity="center"
        tools:context=".MainActivity">


        <!-- ImageView para el logo -->
        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_night" />


        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textColor="@color/white"

            android:textSize="30sp" />

        <!-- Botón para iniciar sesión -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appNameTextView"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/button_style"
            android:backgroundTint="#77DC1717"
            android:text="@string/login"
            android:textColor="@color/white" />

        <!-- Botón para registrar -->
        <Button
            android:id="@+id/registerButton"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"

            android:background="@drawable/button_style"
            android:text="@string/register"
            android:textColor="@color/white" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
